--- a/css/aboutus.scss
+++ b/css/aboutus.scss
@@ -2,19 +2,227 @@
 @import 'color';
 @import 'header';
 
+main {
+    display    : grid;
+    row-gap    : 20px;
+    place-items: center;
+}
+
 article {
-    display: grid;
-    padding: 15px;
+    display    : grid;
+    padding    : 10%;
+    row-gap    : 15px;
+    place-items: center;
 
 
-    >h3 {
+    h3 {
         font-size: 40px;
+        width    : 100%;
     }
 
     >img {
-        padding: 15px;
-        width: calc(100% - 30px);
+        width: 90%;
     }
 }
 
+article>div:not(.youtube) {
+    display: grid;
+    row-gap: 15px;
+}
+
+.bg_image_container {
+    position   : relative;
+    height     : 300px;
+    overflow   : hidden;
+    display    : grid;
+    place-items: center;
+    object-fit : cover;
+    padding    : 50px 0px;
+    width      : 100%;
+}
+
+.history_container>.bg_image_container {
+    background-image   : url(https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/bc3ce265-e604-4d5f-9aeb-c4aab7a32855.JPG);
+    background-size    : cover;
+    background-position: center;
+}
+
+.recipe_container>.bg_image_container {
+    background-image   : url(https://popmenucloud.com/cdn-cgi/image/width=960,height=960,fit=scale-down,format=auto,quality=60/zeaxdpym/2625f15d-b1a7-411b-bf78-706aeb265e9c.JPG);
+    background-size    : cover;
+    background-position: center;
+}
+
+.kitchen_container>.bg_image_container {
+    background-image   : url(https://images.unsplash.com/photo-1599875953199-2b39f58d106a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=773&q=80);
+    background-size    : cover;
+    background-position: center;
+}
+
+.staff>.bg_image_container {
+    background-image   : url(https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/792357da-ae30-4538-ad69-beac139ceca8.png);
+    background-size    : cover;
+    background-position: center;
+}
+
+.staff {
+    display    : grid;
+    place-items: center;
+
+    .title {
+        position           : relative;
+        width              : 90%;
+        background-image   : url(https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/94d531ab-7c41-4128-bcdd-a29182721324.jpg);
+        background-size    : cover;
+        background-position: center;
+        height             : 200px;
+    }
+
+    .title_text {
+        position     : absolute;
+        color        : white;
+        text-align   : center;
+        width        : 100%;
+        justify-items: center;
+        display      : grid;
+        height       : 100%;
+        row-gap      : 10px;
+        text-shadow  : 2px 2px 3px black;
+
+        h4:nth-child(1) {
+            align-self : end;
+            font-weight: bolder;
+        }
+
+        p:nth-child(2) {
+            align-self : start;
+            font-weight: bolder;
+        }
+    }
+}
+
+.article {
+    display              : grid;
+    // grid-template-rows: repeat(4, minmax(0, 1fr));
+    place-items          : center;
+    padding              : 35px;
+    row-gap              : 25px;
+}
+
+.photo_carousel {
+    display       : grid;
+    place-items   : center;
+    position      : relative;
+    overflow      : hidden;
+    width         : 80%;
+    // height     : 80%;
+    padding-bottom: 56.25%;
+
+    >img {
+        position  : absolute;
+        width     : 100%;
+        height    : 100%;
+        object-fit: cover;
+    }
+
+    >img:nth-child(1) {
+        animation: photo_carousel 30s infinite;
+    }
+
+    >img:nth-child(2) {
+        animation: photo_carousel1 30s infinite;
+    }
+
+    >img:nth-child(3) {
+        animation: photo_carousel2 30s infinite;
+    }
+}
+
+.article>.photo_carousel:nth-child(2)>img {
+    animation-delay: 5s;
+}
+
+.youtube {
+    position      : relative;
+    padding-bottom: 56.25%;
+    width         : 100%;
+
+    iframe {
+        position: absolute;
+        top     : 0px;
+        left    : 0px;
+        width   : 100%;
+        height  : 100%;
+    }
+}
+
+.message_right {
+    display: none
+}
+
 @include scroll_up(10px, 10px);
+
+@media only screen and (min-width: 600px) {
+    .article p {
+        padding: 5% 25%;
+    }
+
+    article>img {
+        padding: 25px;
+        width  : 70%;
+    }
+
+    .staff .title {
+        height: 300px;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    article {
+        grid-template-columns: 1fr 1fr;
+        padding              : 50px;
+
+        img {
+            width  : 90%;
+            padding: 0px;
+        }
+    }
+
+    .youtube {
+        width         : 90%;
+        padding-bottom: 50.625%;
+    }
+
+    .article {
+        grid-template-columns: 1fr 1fr;
+
+        p {
+            padding: 35px;
+        }
+
+        .photo_carousel {
+            width: 90%;
+        }
+    }
+
+    .message_left {
+        display: none;
+    }
+
+    .message_right {
+        display: inline-block;
+    }
+
+    .bg_image_container:not(.article+.bg_image_container) {
+        position: sticky;
+        top: 0px;
+        height: 100vh;
+        width: 100vw;
+        // object-fit: cover;
+    }
+
+    main>div {
+        position: relative;
+        margin-bottom: 100%;
+    }
+}
