--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  letter-spacing: 1px;
-  font-weight: normal;
+  letter-spacing: 3px;
+  line-height: 1.5em;
+  font-weight: 500;
 }
 
 img {
@@ -239,6 +240,101 @@ img {
   }
 }
 
+@-webkit-keyframes photo_carousel {
+  0% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes photo_carousel {
+  0% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes photo_carousel1 {
+  0% {
+    opacity: 0;
+  }
+  33% {
+    opacity: 1;
+  }
+  66% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes photo_carousel1 {
+  0% {
+    opacity: 0;
+  }
+  33% {
+    opacity: 1;
+  }
+  66% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes photo_carousel2 {
+  0% {
+    opacity: 0;
+  }
+  33% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes photo_carousel2 {
+  0% {
+    opacity: 0;
+  }
+  33% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+body {
+  position: relative;
+  overflow: hidden;
+}
+
 .body {
   position: relative;
   display: -ms-grid;
@@ -404,5 +500,9 @@ nav > a:hover {
 iframe {
   width: 80vw;
   height: 40vh;
+}
+
+p, a {
+  text-shadow: 1px 1px 2px black;
 }
 /*# sourceMappingURL=style.css.map */
