--- a/css/_header.scss
+++ b/css/_header.scss
@@ -4,124 +4,331 @@
 }
 
 #header {
-    padding         : 3px;
-    display         : grid;
-    grid-auto-flow  : column;
-    background-color: $bg_color;
+    padding            : 3px;
+    display            : grid;
+    grid-auto-flow     : column;
+    background-color   : $bg_color;
     // background-image: url(https://png.pngtree.com/background/20210714/original/pngtree-red-gradient-matte-background-picture-image_1216345.jpg);
-    box-shadow      : 5px 5px 15px #b89944;
+    box-shadow         : 5px 5px 15px #b89944;
+    align-items        : center;
 }
 
-.nav>a {
-    padding   : 5px 10px;
-    text-align: right;
+#header_menu_container {
+    position          : absolute;
+    pointer-events    : none;
+    width             : 100%;
+    height            : 100%;
+    top               : 0px;
+    left              : 0px;
+    opacity           : 0;
+    display           : grid;
+    place-items       : center;
+    overflow          : hidden;
+    z-index           : 10;
+    grid-template-rows: 2fr 1fr;
+    transition        : all .4s ease-in;
+
+    >nav {
+        position: relative;
+        width: 100%;
+        display    : grid;
+        place-items: center;
+
+        a {
+            color          : white;
+            text-decoration: none;
+            font-size: 22px;
+            padding: 20px;
+            width: 100%;
+            transform: scale(1);
+            transition: all .3s ease-in-out .1s;
+            text-align: center;
+        }
+    }
 }
 
-.toggle {
-    height  : 60px;
-    width   : 60px;
-    position: absolute;
-    top     : 4px;
-    right   : 4px;
-    opacity : 0;
+#menu_close {
+    display              : grid;
+    grid-template-columns: 1fr 1fr;
+    position             : absolute;
+    top                  : 15px;
+    right                : 0px;
+    width                : 60px;
+    height               : 35px;
+    place-items          : center;
+    justify-self         : end;
+    overflow             : hidden;
+    padding-right        : 10px;
+
+    div {
+        position     : relative;
+        border-bottom: rgb(255, 255, 255) 5px solid;
+        border-radius: 15px;
+        width        : 25px;
+        transform    : translateX(0px);
+        transition   : all .2s ease-in-out;
+
+        &:nth-child(1) {
+            transform   : rotate(35deg) translateX(5px);
+            justify-self: end;
+        }
+
+        &:nth-child(2) {
+            transform: rotate(-35deg) translateX(-5px);
+            justify-self: start;
+        }
+
+        &:nth-child(3) {
+            transform   : rotate(-35deg) translateX(5px);
+            justify-self: end;
+        }
+
+        &:nth-child(4) {
+            transform   : rotate(35deg) translateX(-5px);
+            justify-self: start;
+        }
+    }
+
 }
 
-#logo-container {
-    place-self: start;
-    height    : 60px;
-}
-
-#spacer {
-    display: none;
-}
-
-.nav {
-    display      : none;
+#menu_icon {
+    display      : grid;
     position     : relative;
-    transform    : translateX(0px);
-    transition   : all .6s ease-out;
-    opacity      : 1;
-    margin-top   : 10px;
-    margin-bottom: 10px;
+    top          : 0px;
+    right        : 0px;
+    width        : 60px;
+    height       : 35px;
+    place-items  : center;
+    justify-self : end;
+    overflow     : hidden;
+    padding-right: 10px;
+
+    div {
+        position     : relative;
+        border-bottom: black 5px solid;
+        border-radius: 15px;
+        width        : 40px;
+        transform    : translateX(0px);
+        transition   : all .2s ease-in-out;
+
+        &:nth-child(2) {
+            transition-delay: .2s;
+        }
+
+        &:nth-child(3) {
+            transition-delay: .4s;
+        }
+    }
+
 }
 
-.toggle:checked~.nav {
-    display: grid;
+#menu_info {
+    display    : grid;
+    place-items: center;
+    color      : white;
+
+    >a {
+        text-decoration: none;
+        color          : white;
+    }
 }
 
-.toggle:active~.nav {
-    position        : relative;
-    transform       : translateX(-30px);
-    transition-delay: 2s;
-    opacity         : 0;
+#header_menu_container:target {
+    opacity         : 1;
+    pointer-events  : auto;
+    overflow        : hidden;
+    background-color: rgba(0, 0, 0, 0.603);
 }
 
-#nav {
-    display: grid;
+#menu_icon:hover {
+
+    >div:nth-child(1) {
+        transform                 : translateX(10px);
+        transition-delay          : .1s;
+        transition-timing-function: ease-in-out;
+    }
+
+    >div:nth-child(3) {
+        transform                 : translateX(-10px);
+        transition-delay          : .1s;
+        transition-timing-function: ease-in-out;
+    }
 }
 
-#menu-icon {
-    padding     : 10px;
-    height      : 40px;
-    justify-self: end;
+#header_menu_container:target~#menu_icon {
+
+    >div:nth-child(1) {
+        transform: translateX(80px);
+    }
+
+    >div:nth-child(2) {
+        transform       : translateX(80px);
+        transition-delay: .2s;
+    }
+
+    >div:nth-child(3) {
+        transform       : translateX(80px);
+        transition-delay: .4s;
+    }
 }
+
+#menu_close:hover {
+
+    >div:nth-child(1) {
+        transform   : rotate(35deg) translateX(0px);
+    }
+
+    >div:nth-child(2) {
+        transform   : rotate(-35deg) translateX(0px);
+
+    }
+
+    >div:nth-child(3) {
+        transform   : rotate(-35deg) translateX(0px);
+
+    }
+
+    >div:nth-child(4) {
+        transform   : rotate(35deg) translateX(0px);
+
+    }
+}
+
+#header_menu_container>.nav>a:hover {    
+    transform: scale(1.3);
+}
+
+// .nav>a {
+//     padding   : 5px 10px;
+//     text-align: right;
+// }
+
+// .toggle {
+//     height  : 60px;
+//     width   : 60px;
+//     position: absolute;
+//     top     : 4px;
+//     right   : 4px;
+//     opacity : 0;
+// }
+
+// #logo-container {
+//     place-self: start;
+//     height    : 60px;
+// }
+
+// #spacer {
+//     display: none;
+// }
+
+// .nav {
+//     display      : none;
+//     position     : relative;
+//     transform    : translateX(0px);
+//     transition   : all .6s ease-out;
+//     opacity      : 1;
+//     margin-top   : 10px;
+//     margin-bottom: 10px;
+// }
+
+// .toggle:checked~.nav {
+//     display: grid;
+// }
+
+// .toggle:active~.nav {
+//     position        : relative;
+//     transform       : translateX(-30px);
+//     transition-delay: 2s;
+//     opacity         : 0;
+// }
+
+// #nav {
+//     display: grid;
+// }
+
+// #menu-icon {
+//     padding     : 10px;
+//     height      : 40px;
+//     justify-self: end;
+// }
 
 @media only screen and (min-width: 600px) {
 
-    #header {
-        background-color: $header_bg_color_sec;
-    }
 
-    .nav {
-        margin        : 0;
-        padding       : 0;
-        display       : grid;
-        grid-auto-flow: column;
-        place-items   : center;
-    }
 
-    .nav>a {
-        padding: 0;
-        margin : 0;
-    }
 
-    #nav {
-        margin : 0;
-        padding: 0;
-    }
 
-    #menu-icon,
-    #toggle {
-        display: none;
-    }
+
+
+
+
+
+
+    //     #header {
+    //         background-color: $header_bg_color_sec;
+    //     }
+
+    //     .nav {
+    //         margin        : 0;
+    //         padding       : 0;
+    //         display       : grid;
+    //         grid-auto-flow: column;
+    //         place-items   : center;
+    //     }
+
+    //     .nav>a {
+    //         padding: 0;
+    //         margin : 0;
+    //     }
+
+    //     #nav {
+    //         margin : 0;
+    //         padding: 0;
+    //     }
+
+    //     #menu-icon,
+    //     #toggle {
+    //         display: none;
+    //     }
 }
 
 @media only screen and (min-width: 1000px) {
-    #header {
-        background-color: $header_bg_color_tert;
-        box-shadow      : 2px 2px 5px grey;
-        padding         : 0px 10px;
-        margin-top      : 10px;
-        height          : 60px;
-    }
 
-    #spacer {
-        display         : block;
-        position        : absolute;
-        background-color: $bg_color;
-        height          : 10px;
-        width           : 100vw;
-        top             : 0;
-        left            : 0;
-    }
 
-    #header .logo {
-        position  : relative;
-        height    : 75px;
-        padding   : 0;
-        margin    : 0;
-        z-index   : 3;
-        top       : -7px;
-        place-self: center;
-    }
+
+
+
+
+
+
+
+
+
+    //     #header {
+    //         background-color: $header_bg_color_tert;
+    //         box-shadow      : 2px 2px 5px grey;
+    //         padding         : 0px 10px;
+    //         margin-top      : 10px;
+    //         height          : 60px;
+    //     }
+
+    //     #spacer {
+    //         display         : block;
+    //         position        : absolute;
+    //         background-color: $bg_color;
+    //         height          : 10px;
+    //         width           : 100vw;
+    //         top             : 0;
+    //         left            : 0;
+    //     }
+
+    //     #header .logo {
+    //         position  : relative;
+    //         height    : 75px;
+    //         padding   : 0;
+    //         margin    : 0;
+    //         z-index   : 3;
+    //         top       : -7px;
+    //         place-self: center;
+    //     }
 }
