--- a/css/aboutus.scss
+++ b/css/aboutus.scss
@@ -216,13 +216,13 @@ article>div:not(.youtube) {
     .bg_image_container:not(.article+.bg_image_container) {
         position: sticky;
         top: 0px;
-        height: 100vh;
-        width: 100vw;
+        // height: 100vh;
+        // width: 100vw;
         // object-fit: cover;
     }
 
     main>div {
         position: relative;
-        margin-bottom: 100%;
+        margin-bottom: 1000px;  
     }
 }
