--- a/css/menu.css
+++ b/css/menu.css
@@ -12,6 +12,10 @@ img {
   padding: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 @-webkit-keyframes photo_transition {
   0% {
     opacity: 100%;
@@ -344,122 +348,222 @@ img {
   background-color: red;
   -webkit-box-shadow: 5px 5px 15px #b89944;
           box-shadow: 5px 5px 15px #b89944;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.nav > a {
-  padding: 5px 10px;
-  text-align: right;
-}
-
-.toggle {
-  height: 60px;
-  width: 60px;
+#header_menu_container {
   position: absolute;
-  top: 4px;
-  right: 4px;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
   opacity: 0;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+  z-index: 10;
+  -ms-grid-rows: 2fr 1fr;
+      grid-template-rows: 2fr 1fr;
+  -webkit-transition: all .4s ease-in;
+  transition: all .4s ease-in;
 }
 
-#logo-container {
-  place-self: start;
-  height: 60px;
-}
-
-#spacer {
-  display: none;
-}
-
-.nav {
-  display: none;
+#header_menu_container > nav {
   position: relative;
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+#header_menu_container > nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 22px;
+  padding: 20px;
+  width: 100%;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all .3s ease-in-out .1s;
+  transition: all .3s ease-in-out .1s;
+  text-align: center;
+}
+
+#menu_close {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  position: absolute;
+  top: 15px;
+  right: 0px;
+  width: 60px;
+  height: 35px;
+  place-items: center;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  overflow: hidden;
+  padding-right: 10px;
+}
+
+#menu_close div {
+  position: relative;
+  border-bottom: white 5px solid;
+  border-radius: 15px;
+  width: 25px;
   -webkit-transform: translateX(0px);
           transform: translateX(0px);
-  -webkit-transition: all .6s ease-out;
-  transition: all .6s ease-out;
-  opacity: 1;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
 }
 
-.toggle:checked ~ .nav {
-  display: -ms-grid;
-  display: grid;
-}
-
-.toggle:active ~ .nav {
-  position: relative;
-  -webkit-transform: translateX(-30px);
-          transform: translateX(-30px);
-  -webkit-transition-delay: 2s;
-          transition-delay: 2s;
-  opacity: 0;
-}
-
-#nav {
-  display: -ms-grid;
-  display: grid;
-}
-
-#menu-icon {
-  padding: 10px;
-  height: 40px;
+#menu_close div:nth-child(1) {
+  -webkit-transform: rotate(35deg) translateX(5px);
+          transform: rotate(35deg) translateX(5px);
   -ms-grid-column-align: end;
       justify-self: end;
 }
 
-@media only screen and (min-width: 600px) {
-  #header {
-    background-color: chocolate;
-  }
-  .nav {
-    margin: 0;
-    padding: 0;
-    display: -ms-grid;
-    display: grid;
-    grid-auto-flow: column;
-    place-items: center;
-  }
-  .nav > a {
-    padding: 0;
-    margin: 0;
-  }
-  #nav {
-    margin: 0;
-    padding: 0;
-  }
-  #menu-icon,
-  #toggle {
-    display: none;
-  }
+#menu_close div:nth-child(2) {
+  -webkit-transform: rotate(-35deg) translateX(-5px);
+          transform: rotate(-35deg) translateX(-5px);
+  -ms-grid-column-align: start;
+      justify-self: start;
 }
 
-@media only screen and (min-width: 1000px) {
-  #header {
-    background-color: crimson;
-    -webkit-box-shadow: 2px 2px 5px grey;
-            box-shadow: 2px 2px 5px grey;
-    padding: 0px 10px;
-    margin-top: 10px;
-    height: 60px;
-  }
-  #spacer {
-    display: block;
-    position: absolute;
-    background-color: red;
-    height: 10px;
-    width: 100vw;
-    top: 0;
-    left: 0;
-  }
-  #header .logo {
-    position: relative;
-    height: 75px;
-    padding: 0;
-    margin: 0;
-    z-index: 3;
-    top: -7px;
-    place-self: center;
-  }
+#menu_close div:nth-child(3) {
+  -webkit-transform: rotate(-35deg) translateX(5px);
+          transform: rotate(-35deg) translateX(5px);
+  -ms-grid-column-align: end;
+      justify-self: end;
+}
+
+#menu_close div:nth-child(4) {
+  -webkit-transform: rotate(35deg) translateX(-5px);
+          transform: rotate(35deg) translateX(-5px);
+  -ms-grid-column-align: start;
+      justify-self: start;
+}
+
+#menu_icon {
+  display: -ms-grid;
+  display: grid;
+  position: relative;
+  top: 0px;
+  right: 0px;
+  width: 60px;
+  height: 35px;
+  place-items: center;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  overflow: hidden;
+  padding-right: 10px;
+}
+
+#menu_icon div {
+  position: relative;
+  border-bottom: black 5px solid;
+  border-radius: 15px;
+  width: 40px;
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+#menu_icon div:nth-child(2) {
+  -webkit-transition-delay: .2s;
+          transition-delay: .2s;
+}
+
+#menu_icon div:nth-child(3) {
+  -webkit-transition-delay: .4s;
+          transition-delay: .4s;
+}
+
+#menu_info {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  color: white;
+}
+
+#menu_info > a {
+  text-decoration: none;
+  color: white;
+}
+
+#header_menu_container:target {
+  opacity: 1;
+  pointer-events: auto;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.603);
+}
+
+#menu_icon:hover > div:nth-child(1) {
+  -webkit-transform: translateX(10px);
+          transform: translateX(10px);
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+}
+
+#menu_icon:hover > div:nth-child(3) {
+  -webkit-transform: translateX(-10px);
+          transform: translateX(-10px);
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+}
+
+#header_menu_container:target ~ #menu_icon > div:nth-child(1) {
+  -webkit-transform: translateX(80px);
+          transform: translateX(80px);
+}
+
+#header_menu_container:target ~ #menu_icon > div:nth-child(2) {
+  -webkit-transform: translateX(80px);
+          transform: translateX(80px);
+  -webkit-transition-delay: .2s;
+          transition-delay: .2s;
+}
+
+#header_menu_container:target ~ #menu_icon > div:nth-child(3) {
+  -webkit-transform: translateX(80px);
+          transform: translateX(80px);
+  -webkit-transition-delay: .4s;
+          transition-delay: .4s;
+}
+
+#menu_close:hover > div:nth-child(1) {
+  -webkit-transform: rotate(35deg) translateX(0px);
+          transform: rotate(35deg) translateX(0px);
+}
+
+#menu_close:hover > div:nth-child(2) {
+  -webkit-transform: rotate(-35deg) translateX(0px);
+          transform: rotate(-35deg) translateX(0px);
+}
+
+#menu_close:hover > div:nth-child(3) {
+  -webkit-transform: rotate(-35deg) translateX(0px);
+          transform: rotate(-35deg) translateX(0px);
+}
+
+#menu_close:hover > div:nth-child(4) {
+  -webkit-transform: rotate(35deg) translateX(0px);
+          transform: rotate(35deg) translateX(0px);
+}
+
+#header_menu_container > .nav > a:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 body {
@@ -758,6 +862,6 @@ h3 {
   right: 10px;
   bottom: 10px;
   opacity: .3;
-  z-index: 4;
+  z-index: 3;
 }
 /*# sourceMappingURL=menu.css.map */
