--- a/css/_color.scss
+++ b/css/_color.scss
@@ -2,19 +2,20 @@
 
 
 // background color of website
-$bg_color            : rgb(255, 0, 0);
+$bg_color : #f2D6AD;
+$A_color  : #D8ba92;
+$B_color  : #06d6A0;
+$C_color  : #d10d0c;
+$D_color  : #444545c2;
+
+// faded bg color
+$bg_colorB: rgba(0, 0, 0, 0.575);
+
+$transparent: rgba(0, 0, 0, 0);
 
 
-// background color of footer
-$ftbg_color          : darkgoldenrod;
-
-
-// background colors of header
-$header_bg_color_prim: rgba(255, 175, 1, 0.541);
-$header_bg_color_sec : chocolate;
-$header_bg_color_tert: crimson;
 
 
 // text color
-$font_prim: white;
-$font_sec: black;
+$fontA: white;
+$fontB: black;
