--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,6 +1,6 @@
 .logo {
     height: 60px;
-    filter: drop-shadow(2px 2px 4px black);
+    filter: drop-shadow(2px 2px 4px $fontB);
 }
 
 #header {
@@ -9,15 +9,19 @@
     grid-auto-flow     : column;
     background-color   : $bg_color;
     // background-image: url(https://png.pngtree.com/background/20210714/original/pngtree-red-gradient-matte-background-picture-image_1216345.jpg);
-    box-shadow         : 5px 5px 15px #b89944;
+    // box-shadow         : 5px 5px 15px $C_color;
     align-items        : center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 4;
 }
 
 #header_menu_container {
     position          : absolute;
     pointer-events    : none;
     width             : 100%;
-    height            : 100%;
+    height            : 100vh;
     top               : 0px;
     left              : 0px;
     opacity           : 0;
@@ -26,23 +30,23 @@
     overflow          : hidden;
     z-index           : 10;
     grid-template-rows: 2fr 1fr;
-    transition        : all .4s ease-in;
+    transition        : all .4s ease-in .4s;
 
     >nav {
-        position: relative;
-        width: 100%;
+        position   : relative;
+        width      : 100%;
         display    : grid;
         place-items: center;
 
         a {
-            color          : white;
+            color          : $fontA;
             text-decoration: none;
-            font-size: 22px;
-            padding: 20px;
-            width: 100%;
-            transform: scale(1);
-            transition: all .3s ease-in-out .1s;
-            text-align: center;
+            font-size      : 22px;
+            padding        : 20px;
+            width          : 100%;
+            transform      : scale(1);
+            transition     : all .3s ease-in-out .1s;
+            text-align     : center;
         }
     }
 }
@@ -62,34 +66,35 @@
 
     div {
         position     : relative;
-        border-bottom: rgb(255, 255, 255) 5px solid;
+        border-bottom: $fontA 5px solid;
         border-radius: 15px;
         width        : 25px;
         transform    : translateX(0px);
-        transition   : all .2s ease-in-out;
+        transition   : all .2s ease-in-out .3s;
 
         &:nth-child(1) {
-            transform   : rotate(35deg) translateX(5px);
+            transform   : rotate(35deg) translateX(65px);
             justify-self: end;
         }
 
         &:nth-child(2) {
-            transform: rotate(-35deg) translateX(-5px);
+            transform   : rotate(-35deg) translateX(-65px);
             justify-self: start;
         }
 
         &:nth-child(3) {
-            transform   : rotate(-35deg) translateX(5px);
+            transform   : rotate(-35deg) translateX(65px);
             justify-self: end;
         }
 
         &:nth-child(4) {
-            transform   : rotate(35deg) translateX(-5px);
+            transform   : rotate(35deg) translateX(-65px);
             justify-self: start;
         }
     }
 
 }
+
 
 #menu_icon {
     display      : grid;
@@ -105,18 +110,18 @@
 
     div {
         position     : relative;
-        border-bottom: black 5px solid;
+        border-bottom: $fontB 5px solid;
         border-radius: 15px;
         width        : 40px;
         transform    : translateX(0px);
         transition   : all .2s ease-in-out;
 
         &:nth-child(2) {
-            transition-delay: .2s;
+            transition-delay: .3s;
         }
 
         &:nth-child(3) {
-            transition-delay: .4s;
+            transition-delay: .6s;
         }
     }
 
@@ -125,11 +130,11 @@
 #menu_info {
     display    : grid;
     place-items: center;
-    color      : white;
+    color      : $fontA;
 
     >a {
         text-decoration: none;
-        color          : white;
+        color          : $fontA;
     }
 }
 
@@ -137,7 +142,32 @@
     opacity         : 1;
     pointer-events  : auto;
     overflow        : hidden;
-    background-color: rgba(0, 0, 0, 0.603);
+    background-color: $bg_colorB;
+
+    #menu_close {
+
+        >div:nth-child(1) {
+            transform       : rotate(35deg) translateX(5px);
+            transition-delay: .3s;
+        }
+
+        >div:nth-child(2) {
+            transform       : rotate(-35deg) translateX(-5px);
+            transition-delay: .3s;
+        }
+
+        >div:nth-child(3) {
+            transform       : rotate(-35deg) translateX(5px);
+            transition-delay: .3s;
+        }
+
+        >div:nth-child(4) {
+            transform       : rotate(35deg) translateX(-5px);
+            transition-delay: .3s;
+        }
+
+
+    }
 }
 
 #menu_icon:hover {
@@ -172,31 +202,36 @@
     }
 }
 
-#menu_close:hover {
+#header_menu_container>#menu_close:hover {
 
     >div:nth-child(1) {
-        transform   : rotate(35deg) translateX(0px);
+        transform       : rotate(35deg) translateX(0px);
+        transition-delay: .1s;
     }
 
     >div:nth-child(2) {
-        transform   : rotate(-35deg) translateX(0px);
-
+        transform       : rotate(-35deg) translateX(0px);
+        transition-delay: .1s;
     }
 
     >div:nth-child(3) {
-        transform   : rotate(-35deg) translateX(0px);
-
+        transform       : rotate(-35deg) translateX(0px);
+        transition-delay: .1s;
     }
 
     >div:nth-child(4) {
-        transform   : rotate(35deg) translateX(0px);
-
+        transform       : rotate(35deg) translateX(0px);
+        transition-delay: .1s;
     }
 }
 
-#header_menu_container>.nav>a:hover {    
+#header_menu_container>.nav>a:hover {
     transform: scale(1.3);
 }
+
+// body>#header>#header_menu_container:target body {
+//     overflow: hidden;
+// }
 
 // .nav>a {
 //     padding   : 5px 10px;
