--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -14,6 +14,7 @@ img {
 
 body {
   overflow-x: hidden;
+  background-color: #D8ba92;
 }
 
 @-webkit-keyframes photo_transition {
@@ -345,19 +346,21 @@ body {
   display: -ms-grid;
   display: grid;
   grid-auto-flow: column;
-  background-color: red;
-  -webkit-box-shadow: 5px 5px 15px #b89944;
-          box-shadow: 5px 5px 15px #b89944;
+  background-color: #f2D6AD;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 4;
 }
 
 #header_menu_container {
   position: absolute;
   pointer-events: none;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0px;
   left: 0px;
   opacity: 0;
@@ -368,8 +371,8 @@ body {
   z-index: 10;
   -ms-grid-rows: 2fr 1fr;
       grid-template-rows: 2fr 1fr;
-  -webkit-transition: all .4s ease-in;
-  transition: all .4s ease-in;
+  -webkit-transition: all .4s ease-in .4s;
+  transition: all .4s ease-in .4s;
 }
 
 #header_menu_container > nav {
@@ -417,34 +420,34 @@ body {
   width: 25px;
   -webkit-transform: translateX(0px);
           transform: translateX(0px);
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+  -webkit-transition: all .2s ease-in-out .3s;
+  transition: all .2s ease-in-out .3s;
 }
 
 #menu_close div:nth-child(1) {
-  -webkit-transform: rotate(35deg) translateX(5px);
-          transform: rotate(35deg) translateX(5px);
+  -webkit-transform: rotate(35deg) translateX(65px);
+          transform: rotate(35deg) translateX(65px);
   -ms-grid-column-align: end;
       justify-self: end;
 }
 
 #menu_close div:nth-child(2) {
-  -webkit-transform: rotate(-35deg) translateX(-5px);
-          transform: rotate(-35deg) translateX(-5px);
+  -webkit-transform: rotate(-35deg) translateX(-65px);
+          transform: rotate(-35deg) translateX(-65px);
   -ms-grid-column-align: start;
       justify-self: start;
 }
 
 #menu_close div:nth-child(3) {
-  -webkit-transform: rotate(-35deg) translateX(5px);
-          transform: rotate(-35deg) translateX(5px);
+  -webkit-transform: rotate(-35deg) translateX(65px);
+          transform: rotate(-35deg) translateX(65px);
   -ms-grid-column-align: end;
       justify-self: end;
 }
 
 #menu_close div:nth-child(4) {
-  -webkit-transform: rotate(35deg) translateX(-5px);
-          transform: rotate(35deg) translateX(-5px);
+  -webkit-transform: rotate(35deg) translateX(-65px);
+          transform: rotate(35deg) translateX(-65px);
   -ms-grid-column-align: start;
       justify-self: start;
 }
@@ -476,13 +479,13 @@ body {
 }
 
 #menu_icon div:nth-child(2) {
-  -webkit-transition-delay: .2s;
-          transition-delay: .2s;
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
 }
 
 #menu_icon div:nth-child(3) {
-  -webkit-transition-delay: .4s;
-          transition-delay: .4s;
+  -webkit-transition-delay: .6s;
+          transition-delay: .6s;
 }
 
 #menu_info {
@@ -501,7 +504,35 @@ body {
   opacity: 1;
   pointer-events: auto;
   overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.603);
+  background-color: rgba(0, 0, 0, 0.575);
+}
+
+#header_menu_container:target #menu_close > div:nth-child(1) {
+  -webkit-transform: rotate(35deg) translateX(5px);
+          transform: rotate(35deg) translateX(5px);
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
+}
+
+#header_menu_container:target #menu_close > div:nth-child(2) {
+  -webkit-transform: rotate(-35deg) translateX(-5px);
+          transform: rotate(-35deg) translateX(-5px);
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
+}
+
+#header_menu_container:target #menu_close > div:nth-child(3) {
+  -webkit-transform: rotate(-35deg) translateX(5px);
+          transform: rotate(-35deg) translateX(5px);
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
+}
+
+#header_menu_container:target #menu_close > div:nth-child(4) {
+  -webkit-transform: rotate(35deg) translateX(-5px);
+          transform: rotate(35deg) translateX(-5px);
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
 }
 
 #menu_icon:hover > div:nth-child(1) {
@@ -541,24 +572,32 @@ body {
           transition-delay: .4s;
 }
 
-#menu_close:hover > div:nth-child(1) {
+#header_menu_container > #menu_close:hover > div:nth-child(1) {
   -webkit-transform: rotate(35deg) translateX(0px);
           transform: rotate(35deg) translateX(0px);
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
 }
 
-#menu_close:hover > div:nth-child(2) {
+#header_menu_container > #menu_close:hover > div:nth-child(2) {
   -webkit-transform: rotate(-35deg) translateX(0px);
           transform: rotate(-35deg) translateX(0px);
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
 }
 
-#menu_close:hover > div:nth-child(3) {
+#header_menu_container > #menu_close:hover > div:nth-child(3) {
   -webkit-transform: rotate(-35deg) translateX(0px);
           transform: rotate(-35deg) translateX(0px);
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
 }
 
-#menu_close:hover > div:nth-child(4) {
+#header_menu_container > #menu_close:hover > div:nth-child(4) {
   -webkit-transform: rotate(35deg) translateX(0px);
           transform: rotate(35deg) translateX(0px);
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
 }
 
 #header_menu_container > .nav > a:hover {
@@ -571,6 +610,35 @@ main {
   display: grid;
   row-gap: 20px;
   place-items: center;
+  margin-top: 80px;
+}
+
+main > img:nth-child(1) {
+  width: 100%;
+}
+
+.family_hero {
+  position: relative;
+  height: 150px;
+  overflow: hidden;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  width: 100%;
+}
+
+.family_hero > img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top center;
+     object-position: top center;
+  height: 150px;
+  width: 100%;
+}
+
+h3 {
+  color: #444545c2;
+  font-weight: bolder;
 }
 
 article {
@@ -637,6 +705,22 @@ article > div:not(.youtube) {
   display: -ms-grid;
   display: grid;
   place-items: center;
+  padding-top: 20px;
+  background-color: #06d6A0;
+}
+
+.staff .message_left,
+.staff .message_right {
+  background-color: #D8ba92;
+  padding: 25px;
+}
+
+.staff .article > div:nth-child(1) > p {
+  padding: 25px;
+}
+
+.staff .message_left + .photo_carousel {
+  background-color: #D8ba92;
 }
 
 .staff .title {
@@ -679,8 +763,6 @@ article > div:not(.youtube) {
   display: -ms-grid;
   display: grid;
   place-items: center;
-  padding: 35px;
-  row-gap: 25px;
 }
 
 .photo_carousel {
@@ -689,14 +771,15 @@ article > div:not(.youtube) {
   place-items: center;
   position: relative;
   overflow: hidden;
-  width: 80%;
-  padding-bottom: 56.25%;
+  width: 100%;
+  padding-top: 25px;
+  padding-bottom: 66.25%;
 }
 
 .photo_carousel > img {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -768,7 +851,7 @@ article > div:not(.youtube) {
     padding: 50px;
   }
   article img {
-    width: 90%;
+    width: 80%;
     padding: 0px;
   }
   .youtube {
@@ -791,6 +874,9 @@ article > div:not(.youtube) {
   .message_right {
     display: inline-block;
   }
+  .article > div:nth-child(1) > p {
+    text-align: right;
+  }
   .bg_image_container:not(.article + .bg_image_container) {
     position: -webkit-sticky;
     position: sticky;
@@ -798,7 +884,6 @@ article > div:not(.youtube) {
   }
   main > div {
     position: relative;
-    margin-bottom: 1000px;
   }
 }
 /*# sourceMappingURL=aboutus.css.map */
