--- a/css/aboutus.scss
+++ b/css/aboutus.scss
@@ -1,11 +1,38 @@
-@import 'global';
 @import 'color';
+@import 'global';
 @import 'header';
 
 main {
     display    : grid;
     row-gap    : 20px;
     place-items: center;
+    margin-top : 80px;
+
+    >img:nth-child(1) {
+        width: 100%;
+    }
+}
+
+.family_hero {
+    position   : relative;
+    height     : 150px;
+    overflow   : hidden;
+    display    : grid;
+    place-items: center;
+    width      : 100%;
+
+    >img {
+        object-fit     : cover;
+        object-position: top center;
+        height         : 150px;
+        width          : 100%;
+    }
+
+}
+
+h3 {
+    color: $D_color;
+    font-weight: bolder;
 }
 
 article {
@@ -41,6 +68,8 @@ article>div:not(.youtube) {
     width      : 100%;
 }
 
+
+
 .history_container>.bg_image_container {
     background-image   : url(https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/bc3ce265-e604-4d5f-9aeb-c4aab7a32855.JPG);
     background-size    : cover;
@@ -66,8 +95,27 @@ article>div:not(.youtube) {
 }
 
 .staff {
-    display    : grid;
-    place-items: center;
+    display         : grid;
+    place-items     : center;
+    padding-top     : 20px;
+    background-color: $B_color;
+
+
+    .message_left,
+    .message_right {
+        background-color: $A_color;
+        padding         : 25px;
+    }
+
+    .article>div:nth-child(1)>p {
+        padding         : 25px;
+        
+    }
+
+    .message_left+.photo_carousel {
+        background-color: $A_color;
+    }
+
 
     .title {
         position           : relative;
@@ -80,14 +128,14 @@ article>div:not(.youtube) {
 
     .title_text {
         position     : absolute;
-        color        : white;
+        color        : $fontA;
         text-align   : center;
         width        : 100%;
         justify-items: center;
         display      : grid;
         height       : 100%;
         row-gap      : 10px;
-        text-shadow  : 2px 2px 3px black;
+        text-shadow  : 2px 2px 3px $fontB;
 
         h4:nth-child(1) {
             align-self : end;
@@ -102,11 +150,11 @@ article>div:not(.youtube) {
 }
 
 .article {
-    display              : grid;
+    display                 : grid;
     // grid-template-rows: repeat(4, minmax(0, 1fr));
-    place-items          : center;
-    padding              : 35px;
-    row-gap              : 25px;
+    place-items             : center;
+    // padding              : 35px;
+    // row-gap              : 25px;
 }
 
 .photo_carousel {
@@ -114,14 +162,15 @@ article>div:not(.youtube) {
     place-items   : center;
     position      : relative;
     overflow      : hidden;
-    width         : 80%;
+    width         : 100%;
     // height     : 80%;
-    padding-bottom: 56.25%;
+    padding-top   : 25px;
+    padding-bottom: 66.25%;
 
     >img {
         position  : absolute;
-        width     : 100%;
-        height    : 100%;
+        width     : 80%;
+        height    : 80%;
         object-fit: cover;
     }
 
@@ -160,6 +209,8 @@ article>div:not(.youtube) {
     display: none
 }
 
+
+
 @include scroll_up(10px, 10px);
 
 @media only screen and (min-width: 600px) {
@@ -183,7 +234,7 @@ article>div:not(.youtube) {
         padding              : 50px;
 
         img {
-            width  : 90%;
+            width  : 80%;
             padding: 0px;
         }
     }
@@ -213,9 +264,13 @@ article>div:not(.youtube) {
         display: inline-block;
     }
 
+    .article>div:nth-child(1)>p {
+        text-align: right;
+    }
+
     .bg_image_container:not(.article+.bg_image_container) {
-        position: sticky;
-        top: 0px;
+        position     : sticky;
+        top          : 0px;
         // height: 100vh;
         // width: 100vw;
         // object-fit: cover;
@@ -223,6 +278,5 @@ article>div:not(.youtube) {
 
     main>div {
         position: relative;
-        margin-bottom: 1000px;  
     }
 }
