--- a/css/menu.css
+++ b/css/menu.css
@@ -14,6 +14,7 @@ img {
 
 body {
   overflow-x: hidden;
+  background-color: #D8ba92;
 }
 
 @-webkit-keyframes photo_transition {
@@ -345,19 +346,21 @@ body {
   display: -ms-grid;
   display: grid;
   grid-auto-flow: column;
-  background-color: red;
-  -webkit-box-shadow: 5px 5px 15px #b89944;
-          box-shadow: 5px 5px 15px #b89944;
+  background-color: #f2D6AD;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 4;
 }
 
 #header_menu_container {
   position: absolute;
   pointer-events: none;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0px;
   left: 0px;
   opacity: 0;
@@ -368,8 +371,8 @@ body {
   z-index: 10;
   -ms-grid-rows: 2fr 1fr;
       grid-template-rows: 2fr 1fr;
-  -webkit-transition: all .4s ease-in;
-  transition: all .4s ease-in;
+  -webkit-transition: all .4s ease-in .4s;
+  transition: all .4s ease-in .4s;
 }
 
 #header_menu_container > nav {
@@ -417,34 +420,34 @@ body {
   width: 25px;
   -webkit-transform: translateX(0px);
           transform: translateX(0px);
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+  -webkit-transition: all .2s ease-in-out .3s;
+  transition: all .2s ease-in-out .3s;
 }
 
 #menu_close div:nth-child(1) {
-  -webkit-transform: rotate(35deg) translateX(5px);
-          transform: rotate(35deg) translateX(5px);
+  -webkit-transform: rotate(35deg) translateX(65px);
+          transform: rotate(35deg) translateX(65px);
   -ms-grid-column-align: end;
       justify-self: end;
 }
 
 #menu_close div:nth-child(2) {
-  -webkit-transform: rotate(-35deg) translateX(-5px);
-          transform: rotate(-35deg) translateX(-5px);
+  -webkit-transform: rotate(-35deg) translateX(-65px);
+          transform: rotate(-35deg) translateX(-65px);
   -ms-grid-column-align: start;
       justify-self: start;
 }
 
 #menu_close div:nth-child(3) {
-  -webkit-transform: rotate(-35deg) translateX(5px);
-          transform: rotate(-35deg) translateX(5px);
+  -webkit-transform: rotate(-35deg) translateX(65px);
+          transform: rotate(-35deg) translateX(65px);
   -ms-grid-column-align: end;
       justify-self: end;
 }
 
 #menu_close div:nth-child(4) {
-  -webkit-transform: rotate(35deg) translateX(-5px);
-          transform: rotate(35deg) translateX(-5px);
+  -webkit-transform: rotate(35deg) translateX(-65px);
+          transform: rotate(35deg) translateX(-65px);
   -ms-grid-column-align: start;
       justify-self: start;
 }
@@ -476,13 +479,13 @@ body {
 }
 
 #menu_icon div:nth-child(2) {
-  -webkit-transition-delay: .2s;
-          transition-delay: .2s;
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
 }
 
 #menu_icon div:nth-child(3) {
-  -webkit-transition-delay: .4s;
-          transition-delay: .4s;
+  -webkit-transition-delay: .6s;
+          transition-delay: .6s;
 }
 
 #menu_info {
@@ -501,7 +504,35 @@ body {
   opacity: 1;
   pointer-events: auto;
   overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.603);
+  background-color: rgba(0, 0, 0, 0.575);
+}
+
+#header_menu_container:target #menu_close > div:nth-child(1) {
+  -webkit-transform: rotate(35deg) translateX(5px);
+          transform: rotate(35deg) translateX(5px);
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
+}
+
+#header_menu_container:target #menu_close > div:nth-child(2) {
+  -webkit-transform: rotate(-35deg) translateX(-5px);
+          transform: rotate(-35deg) translateX(-5px);
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
+}
+
+#header_menu_container:target #menu_close > div:nth-child(3) {
+  -webkit-transform: rotate(-35deg) translateX(5px);
+          transform: rotate(-35deg) translateX(5px);
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
+}
+
+#header_menu_container:target #menu_close > div:nth-child(4) {
+  -webkit-transform: rotate(35deg) translateX(-5px);
+          transform: rotate(35deg) translateX(-5px);
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
 }
 
 #menu_icon:hover > div:nth-child(1) {
@@ -541,24 +572,32 @@ body {
           transition-delay: .4s;
 }
 
-#menu_close:hover > div:nth-child(1) {
+#header_menu_container > #menu_close:hover > div:nth-child(1) {
   -webkit-transform: rotate(35deg) translateX(0px);
           transform: rotate(35deg) translateX(0px);
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
 }
 
-#menu_close:hover > div:nth-child(2) {
+#header_menu_container > #menu_close:hover > div:nth-child(2) {
   -webkit-transform: rotate(-35deg) translateX(0px);
           transform: rotate(-35deg) translateX(0px);
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
 }
 
-#menu_close:hover > div:nth-child(3) {
+#header_menu_container > #menu_close:hover > div:nth-child(3) {
   -webkit-transform: rotate(-35deg) translateX(0px);
           transform: rotate(-35deg) translateX(0px);
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
 }
 
-#menu_close:hover > div:nth-child(4) {
+#header_menu_container > #menu_close:hover > div:nth-child(4) {
   -webkit-transform: rotate(35deg) translateX(0px);
           transform: rotate(35deg) translateX(0px);
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
 }
 
 #header_menu_container > .nav > a:hover {
@@ -567,9 +606,7 @@ body {
 }
 
 body {
-  background-image: url(https://img.wallpapersafari.com/desktop/1920/1080/11/16/4jUT2Y.jpg);
-  background-position: center;
-  background-attachment: fixed;
+  position: relative;
 }
 
 .menu_container {
@@ -577,7 +614,12 @@ body {
   display: grid;
   position: relative;
   margin-top: 20px;
-  padding: 10px;
+  place-items: center;
+  padding-top: 100px;
+}
+
+.menu_container > div {
+  width: 100%;
 }
 
 .menu_container input {
@@ -592,21 +634,19 @@ body {
   place-items: center;
   -webkit-column-gap: 1px;
           column-gap: 1px;
+  width: 100%;
+  max-width: 525px;
 }
 
 .menu_selector > label {
   padding: 10px 0px;
-  background-color: burlywood;
+  background-color: #d10d0c;
   width: 100%;
   text-align: center;
   -webkit-transition: all .4s ease-in;
   transition: all .4s ease-in;
   font-weight: 400;
-}
-
-.pizza_container > .pizza,
-.calzone_container > .calzone {
-  font-size: .7rem;
+  font-size: 12px;
 }
 
 .pizza_container > .pizza .mask h2,
@@ -654,7 +694,7 @@ body {
   display: -ms-grid;
   display: grid;
   place-items: center;
-  border-bottom: white dashed 1px;
+  border-bottom: #d10d0c dashed 1px;
 }
 
 .pizza_container .price_container .price,
@@ -666,6 +706,7 @@ body {
 
 .food {
   overflow: hidden;
+  max-width: 475px;
 }
 
 .food .shell {
@@ -690,7 +731,7 @@ body {
   top: 0;
   left: 0;
   opacity: 1;
-  background-color: rgba(255, 86, 8, 0.7);
+  background-color: #444545c2;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
@@ -720,12 +761,12 @@ body {
   text-shadow: 0px 0px 0px white;
   -ms-grid-column-align: end;
       justify-self: end;
-  right: calc(50% - 31.5px);
+  right: calc(50% - 36.5px);
 }
 
 .food .shell p {
   font-style: italic;
-  font-size: .7rem;
+  font-size: .6em;
   position: relative;
   color: white;
   opacity: 1;
@@ -739,8 +780,8 @@ body {
   position: relative;
   display: inline-block;
   width: 100%;
-  padding: 5px;
-  font-size: .8rem;
+  padding: 5px 0px;
+  font-size: .6em;
   background: black;
   color: white;
   opacity: .75;
@@ -751,9 +792,6 @@ body {
   transition: all 0.2s ease-out;
   text-shadow: 0px 0px 0px white;
   font-weight: 700;
-  left: 10px;
-  -webkit-transform: translateX(-10px);
-          transform: translateX(-10px);
 }
 
 .food .shell:hover img {
@@ -762,16 +800,15 @@ body {
 }
 
 .food .shell:hover .mask {
-  background-color: rgba(255, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .food .shell:hover h2 {
   color: black;
   font-size: 1.1em;
   text-shadow: 1px 1px 3px white;
-  opacity: 1;
   text-align: right;
-  right: 0px;
+  right: 2px;
 }
 
 .food .shell:hover p {
@@ -787,8 +824,6 @@ body {
   font-weight: 900;
   -ms-grid-column-align: start;
       justify-self: start;
-  text-align: left;
-  left: 5px;
 }
 
 .appetizer_container,
@@ -796,20 +831,22 @@ body {
 .pizza_container,
 .calzone_container {
   display: none;
-  -ms-grid-columns: (minmax(300px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  background-color: red;
+  grid-auto-flow: row;
+  background-color: #06d6A0;
   position: relative;
+  max-width: 525px;
+  place-items: center;
+  font-size: 1.2rem;
 }
 
 .food {
-  border-bottom: white 1px dashed;
+  border-bottom: #d10d0c 1px dashed;
   padding: 25px;
 }
 
 .appetizer h2,
 .pasta h2 {
-  width: 63px;
+  width: 73px;
 }
 
 h3 {
@@ -817,7 +854,7 @@ h3 {
 }
 
 #appetizer:checked ~ .menu_selector > label:nth-child(1) {
-  background-color: red;
+  background-color: #06d6A0;
   color: white;
 }
 
@@ -827,7 +864,7 @@ h3 {
 }
 
 #pasta:checked ~ .menu_selector > label:nth-child(2) {
-  background-color: red;
+  background-color: #06d6A0;
   color: white;
 }
 
@@ -837,7 +874,7 @@ h3 {
 }
 
 #pizza:checked ~ .menu_selector > label:nth-child(3) {
-  background-color: red;
+  background-color: #06d6A0;
   color: white;
 }
 
@@ -847,7 +884,7 @@ h3 {
 }
 
 #calzone:checked ~ .menu_selector > label:nth-child(4) {
-  background-color: red;
+  background-color: #06d6A0;
   color: white;
 }
 
@@ -863,5 +900,45 @@ h3 {
   bottom: 10px;
   opacity: .3;
   z-index: 3;
+}
+
+@media only screen and (min-width: 765px) {
+  .appetizer_container,
+  .pasta_container,
+  .pizza_container,
+  .calzone_container {
+    -ms-grid-columns: (minmax(350px, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    max-width: 100%;
+  }
+  .pizza_container .price_container,
+  .calzone_container .price_container {
+    grid-column: span 2;
+  }
+  .menu_selector {
+    max-width: 100%;
+  }
+  .menu_container {
+    padding: 25px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .pizza_container .price_container,
+  .calzone_container .price_container {
+    grid-column: span 3;
+  }
+}
+
+@media only screen and (min-width: 1255px) {
+  .appetizer_container,
+  .pasta_container,
+  .pizza_container,
+  .calzone_container {
+    max-width: 1200px;
+  }
+  .menu_selector {
+    max-width: 1200px;
+  }
 }
 /*# sourceMappingURL=menu.css.map */
