included map feature in header, styled bottom footer, added promotional banner for menu, changed color sheme[D[D[D[Dcheme

--- a/css/_color.scss
+++ b/css/_color.scss
@@ -4,9 +4,9 @@
 // background color of website
 $bg_color : #f2D6AD;
 $A_color  : #D8ba92;
-$B_color  : #06d6A0;
-$C_color  : #d10d0c;
-$D_color  : #444545c2;
+$B_color  : #444545;
+$C_color  : #06d6A0;
+$D_color  : #d10d0c;
 
 // faded bg color
 $bg_colorB: rgba(0, 0, 0, 0.575);
