--- a/css/_global.scss
+++ b/css/_global.scss
@@ -14,7 +14,7 @@ img {
 
 body {
     overflow-x: hidden;
-    background-color: $A_color;
+    background-color: $bg_color;
 }
 
 
@@ -26,7 +26,7 @@ $ihc_text  : $fontA;
 // text color
 $ihc_textbg: $fontB;
 // text background color
-$ihc_mask  : $D_color;
+$ihc_mask  : #d10c0ca8;
 
 // Image mask layout
 // 
@@ -124,9 +124,13 @@ $ihc_mask  : $D_color;
         background-color: $transparent;
     }
 
+    .shell:hover {
+        border     : .5px solid $fontB;
+    }
+
     .shell:hover h2 {
         // justify-self: end;
-        color      : black;
+        color      : $fontB;
         font-size  : 1.1em;
         text-shadow: 1px 1px 3px $fontA;
         text-align : right;
@@ -139,12 +143,12 @@ $ihc_mask  : $D_color;
     }
 
     .shell:hover h3 {
-        text-shadow        : 1px 1px 2px $fontA;
+        text-shadow        : 1px 1px 3px $fontA;
         color              : $fontB;
         background         : $transparent;
         // transition-delay: 0.2s;
         font-weight        : 900;
-        justify-self       : start;
+        font-size: .7em;
         // text-align         : left;
     }
 
