--- a/css/aboutus.scss
+++ b/css/aboutus.scss
@@ -1,6 +1,7 @@
 @import 'color';
 @import 'global';
 @import 'header';
+@import 'footer';
 
 main {
     display    : grid;
@@ -55,6 +56,7 @@ article {
 article>div:not(.youtube) {
     display: grid;
     row-gap: 15px;
+    padding: 10px;
 }
 
 .bg_image_container {
@@ -88,11 +90,11 @@ article>div:not(.youtube) {
     background-position: center;
 }
 
-.staff>.bg_image_container {
-    background-image   : url(https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/792357da-ae30-4538-ad69-beac139ceca8.png);
-    background-size    : cover;
-    background-position: center;
-}
+// .staff>.bg_image_container {
+//     background-image   : url(https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/792357da-ae30-4538-ad69-beac139ceca8.png);
+//     background-size    : cover;
+//     background-position: center;
+// }
 
 .staff {
     display         : grid;
@@ -104,12 +106,27 @@ article>div:not(.youtube) {
     .message_left,
     .message_right {
         background-color: $A_color;
-        padding         : 25px;
+        // padding         : 25px;
+        
+    }
+
+    .article>div:nth-child(1),
+    .message_left {
+        display: grid;
+        place-items: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .message_left p {
+        padding: 25px 0px;
+        width: 80%;
     }
 
     .article>div:nth-child(1)>p {
-        padding         : 25px;
-        
+        padding         : 25px 0px;
+        width: 80%;
+        color: $fontA;
     }
 
     .message_left+.photo_carousel {
@@ -214,8 +231,13 @@ article>div:not(.youtube) {
 @include scroll_up(10px, 10px);
 
 @media only screen and (min-width: 600px) {
-    .article p {
+    .staff .article p {
         padding: 5% 25%;
+    }
+
+   .staff .article>div:nth-child(1)>p {
+        padding         : 5% 25%;
+        
     }
 
     article>img {
@@ -244,37 +266,44 @@ article>div:not(.youtube) {
         padding-bottom: 50.625%;
     }
 
-    .article {
+    .staff .article {
         grid-template-columns: 1fr 1fr;
 
         p {
-            padding: 35px;
+            padding: 65px;
+            width: 80%;
+        }
+
+        .article>div:nth-child(1)>p {
+            padding         : 65px;
+            width: 80%;
         }
 
         .photo_carousel {
-            width: 90%;
+            width: 100%;
         }
     }
 
-    .message_left {
+    .article .message_left {
         display: none;
     }
 
-    .message_right {
-        display: inline-block;
+    .staff .message_right {
+        display: grid;
+        place-items: center;
+        width: 100%;
+        height: 100%;
+        padding: 0px;
     }
 
     .article>div:nth-child(1)>p {
         text-align: right;
     }
 
-    .bg_image_container:not(.article+.bg_image_container) {
-        position     : sticky;
-        top          : 0px;
-        // height: 100vh;
-        // width: 100vw;
-        // object-fit: cover;
-    }
+   .message_left+.photo_carousel {
+       width: 100%;
+    //    height: 100%;
+   }
 
     main>div {
         position: relative;
