--- a/css/menu.css
+++ b/css/menu.css
@@ -14,7 +14,7 @@ img {
 
 body {
   overflow-x: hidden;
-  background-color: #D8ba92;
+  background-color: #f2D6AD;
 }
 
 @-webkit-keyframes photo_transition {
@@ -346,7 +346,7 @@ body {
   display: -ms-grid;
   display: grid;
   grid-auto-flow: column;
-  background-color: #f2D6AD;
+  background-color: #D8ba92;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -510,29 +510,108 @@ body {
 #header_menu_container:target #menu_close > div:nth-child(1) {
   -webkit-transform: rotate(35deg) translateX(5px);
           transform: rotate(35deg) translateX(5px);
-  -webkit-transition-delay: .3s;
-          transition-delay: .3s;
+  -webkit-transition-delay: .9s;
+          transition-delay: .9s;
 }
 
 #header_menu_container:target #menu_close > div:nth-child(2) {
   -webkit-transform: rotate(-35deg) translateX(-5px);
           transform: rotate(-35deg) translateX(-5px);
-  -webkit-transition-delay: .3s;
-          transition-delay: .3s;
+  -webkit-transition-delay: .9s;
+          transition-delay: .9s;
 }
 
 #header_menu_container:target #menu_close > div:nth-child(3) {
   -webkit-transform: rotate(-35deg) translateX(5px);
           transform: rotate(-35deg) translateX(5px);
-  -webkit-transition-delay: .3s;
-          transition-delay: .3s;
+  -webkit-transition-delay: .9s;
+          transition-delay: .9s;
 }
 
 #header_menu_container:target #menu_close > div:nth-child(4) {
   -webkit-transform: rotate(35deg) translateX(-5px);
           transform: rotate(35deg) translateX(-5px);
-  -webkit-transition-delay: .3s;
-          transition-delay: .3s;
+  -webkit-transition-delay: .9s;
+          transition-delay: .9s;
+}
+
+#map_link {
+  display: none;
+}
+
+#map {
+  position: absolute;
+  pointer-events: none;
+  opacity: 0%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+#close {
+  right: calc(10vw - .75rem);
+  top: calc(30vh - .75rem);
+  width: 1.5rem;
+  height: 1.5rem;
+  position: absolute;
+  display: -ms-grid;
+  display: grid;
+  z-index: 4;
+  place-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: black;
+  border-radius: 50%;
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+  -webkit-transition: opacity .4s ease-in-out 1s;
+  transition: opacity .4s ease-in-out 1s;
+  opacity: 0;
+}
+
+#close p {
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  padding: 0px 0px 2px 2px;
+}
+
+#bg_close {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+#map:target > #close {
+  opacity: 1;
+}
+
+#map:target {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.575);
+  top: 0px;
+  z-index: 10;
+  row-gap: 20px;
+  opacity: 100%;
+  pointer-events: auto;
+}
+
+#map:target .map_container {
+  -webkit-animation: open 1s ease-in-out;
+          animation: open 1s ease-in-out;
+  overflow: hidden;
+  width: 80%;
+  height: 40%;
+  z-index: 2;
+}
+
+iframe {
+  width: 80vw;
+  height: 40vh;
 }
 
 #menu_icon:hover > div:nth-child(1) {
@@ -605,6 +684,34 @@ body {
           transform: scale(1.3);
 }
 
+@media only screen and (min-width: 600px) {
+  #map_glink {
+    display: none;
+  }
+  #map_link {
+    display: inline;
+  }
+}
+
+footer {
+  position: relative;
+  height: 100px;
+  background-image: url(https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/792357da-ae30-4538-ad69-beac139ceca8.png);
+  background-size: cover;
+  background-position: center;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+footer p {
+  text-align: center;
+  color: white;
+  text-shadow: 1px 1px 3px black;
+  width: 80%;
+  font-size: 14px;
+}
+
 body {
   position: relative;
 }
@@ -615,7 +722,6 @@ body {
   position: relative;
   margin-top: 20px;
   place-items: center;
-  padding-top: 100px;
 }
 
 .menu_container > div {
@@ -623,6 +729,43 @@ body {
 }
 
 .menu_container input {
+  display: none;
+}
+
+.promotional_banner {
+  position: relative;
+  height: 200px;
+  margin: 100px 0px 60px;
+  display: -ms-grid;
+  display: grid;
+  place-items: start;
+  border: 2px white solid;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.promotional_banner img {
+  height: 100%;
+  position: absolute;
+  -o-object-position: center;
+     object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+}
+
+.promotional_banner h1 {
+  width: 80%;
+  text-shadow: 2px 2px 5px black;
+  color: white;
+  position: relative;
+  padding: 25px;
+  text-align: left;
+  font-size: calc(3vw + .9em);
+}
+
+.pizza_container .food .shell h2,
+.calzone_container .food .shell h2 {
   display: none;
 }
 
@@ -640,13 +783,13 @@ body {
 
 .menu_selector > label {
   padding: 10px 0px;
-  background-color: #d10d0c;
+  background-color: #444545;
   width: 100%;
   text-align: center;
   -webkit-transition: all .4s ease-in;
   transition: all .4s ease-in;
-  font-weight: 400;
-  font-size: 12px;
+  font-weight: 600;
+  font-size: 14px;
 }
 
 .pizza_container > .pizza .mask h2,
@@ -694,7 +837,8 @@ body {
   display: -ms-grid;
   display: grid;
   place-items: center;
-  border-bottom: #d10d0c dashed 1px;
+  border-bottom: #444545 dashed 1px;
+  width: 100%;
 }
 
 .pizza_container .price_container .price,
@@ -731,7 +875,7 @@ body {
   top: 0;
   left: 0;
   opacity: 1;
-  background-color: #444545c2;
+  background-color: #d10c0ca8;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
@@ -803,6 +947,10 @@ body {
   background-color: rgba(0, 0, 0, 0);
 }
 
+.food .shell:hover {
+  border: 0.5px solid black;
+}
+
 .food .shell:hover h2 {
   color: black;
   font-size: 1.1em;
@@ -818,12 +966,11 @@ body {
 }
 
 .food .shell:hover h3 {
-  text-shadow: 1px 1px 2px white;
+  text-shadow: 1px 1px 3px white;
   color: black;
   background: rgba(0, 0, 0, 0);
   font-weight: 900;
-  -ms-grid-column-align: start;
-      justify-self: start;
+  font-size: .7em;
 }
 
 .appetizer_container,
@@ -832,7 +979,7 @@ body {
 .calzone_container {
   display: none;
   grid-auto-flow: row;
-  background-color: #06d6A0;
+  background-color: #D8ba92;
   position: relative;
   max-width: 525px;
   place-items: center;
@@ -840,7 +987,7 @@ body {
 }
 
 .food {
-  border-bottom: #d10d0c 1px dashed;
+  border-bottom: #444545 1px dashed;
   padding: 25px;
 }
 
@@ -854,7 +1001,7 @@ h3 {
 }
 
 #appetizer:checked ~ .menu_selector > label:nth-child(1) {
-  background-color: #06d6A0;
+  background-color: #D8ba92;
   color: white;
 }
 
@@ -864,7 +1011,7 @@ h3 {
 }
 
 #pasta:checked ~ .menu_selector > label:nth-child(2) {
-  background-color: #06d6A0;
+  background-color: #D8ba92;
   color: white;
 }
 
@@ -874,7 +1021,7 @@ h3 {
 }
 
 #pizza:checked ~ .menu_selector > label:nth-child(3) {
-  background-color: #06d6A0;
+  background-color: #D8ba92;
   color: white;
 }
 
@@ -884,7 +1031,7 @@ h3 {
 }
 
 #calzone:checked ~ .menu_selector > label:nth-child(4) {
-  background-color: #06d6A0;
+  background-color: #D8ba92;
   color: white;
 }
 
@@ -910,6 +1057,11 @@ h3 {
     -ms-grid-columns: (minmax(350px, 1fr))[auto-fill];
         grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     max-width: 100%;
+    font-size: 1.3rem;
+  }
+  .appetizer h2,
+  .pasta h2 {
+    width: 84px;
   }
   .pizza_container .price_container,
   .calzone_container .price_container {
