--- a/css/menu.scss
+++ b/css/menu.scss
@@ -1,6 +1,7 @@
 @import 'color';
 @import 'global';
 @import 'header';
+@import 'footer';
 
 
 body {
@@ -8,11 +9,10 @@ body {
 }
 
 .menu_container {
-    display   : grid;
-    position  : relative;
-    margin-top: 20px;
+    display    : grid;
+    position   : relative;
+    margin-top : 20px;
     place-items: center;
-    padding-top: 100px;
 
     >div {
         width: 100%;
@@ -24,22 +24,59 @@ body {
     }
 }
 
+.promotional_banner {
+    position   : relative;
+    height     : 200px;
+    margin     : 100px 0px 60px;
+    display    : grid;
+    place-items: start;
+    border     : 2px $fontA solid;
+    box-sizing : border-box;
+
+    img {
+        height         : 100%;
+        position       : absolute;
+        object-position: center;
+        object-fit     : cover;
+        width          : 100%;
+    }
+
+    h1 {
+        width      : 80%;
+        text-shadow: 2px 2px 5px $fontB;
+        color      : $fontA;
+        position   : relative;
+        padding    : 25px;
+        text-align : left;
+        font-size  : calc(3vw + .9em);
+    }
+
+}
+
+.pizza_container,
+.calzone_container {
+
+    .food .shell h2 {
+        display: none;
+    }
+}
+
 .menu_selector {
     display              : grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     place-items          : center;
     column-gap           : 1px;
-    width: 100%;    
-    max-width: 525px;
+    width                : 100%;
+    max-width            : 525px;
 
     >label {
         padding         : 10px 0px;
-        background-color: $C_color;
+        background-color: $B_color;
         width           : 100%;
         text-align      : center;
         transition      : all .4s ease-in;
-        font-weight     : 400;
-        font-size: 12px;
+        font-weight     : 600;
+        font-size       : 14px;
     }
 }
 
@@ -64,15 +101,15 @@ body {
     }
 
     .small_price_container {
-        display                 : grid;
-        position                : relative;
-        width                   : 100%;
-        height                  : 80%;
-        justify-self            : center;
-        justify-items           : center;
-        align-self              : end;
-        grid-auto-flow          : column;
-        column-gap              : 5px;
+        display       : grid;
+        position      : relative;
+        width         : 100%;
+        height        : 80%;
+        justify-self  : center;
+        justify-items : center;
+        align-self    : end;
+        grid-auto-flow: column;
+        column-gap    : 5px;
 
         h2:not(h2:nth-child(5)) {
             border-right: $fontB 1px solid;
@@ -92,7 +129,8 @@ body {
         position     : relative;
         display      : grid;
         place-items  : center;
-        border-bottom: $C_color dashed 1px;
+        border-bottom: $B_color dashed 1px;
+        width        : 100%;
 
 
         .price {
@@ -106,7 +144,7 @@ body {
 
 .food {
     @include image_hover(100%, 100%);
-    overflow: hidden;
+    overflow : hidden;
     max-width: 475px;
 }
 
@@ -114,17 +152,17 @@ body {
 .pasta_container,
 .pizza_container,
 .calzone_container {
-    display              : none;
-    grid-auto-flow: row;
-    background-color     : $B_color;
-    position             : relative;
-    max-width: 525px;
-    place-items: center;
-    font-size: 1.2rem;
+    display         : none;
+    grid-auto-flow  : row;
+    background-color: $A_color;
+    position        : relative;
+    max-width       : 525px;
+    place-items     : center;
+    font-size       : 1.2rem;
 }
 
 .food {
-    border-bottom: $C_color 1px dashed;
+    border-bottom: $B_color 1px dashed;
     padding      : 25px;
 }
 
@@ -144,7 +182,7 @@ h3 {
 #appetizer:checked {
 
     ~.menu_selector>label:nth-child(1) {
-        background-color: $B_color;
+        background-color: $A_color;
         color           : $fontA;
     }
 
@@ -156,7 +194,7 @@ h3 {
 #pasta:checked {
 
     ~.menu_selector>label:nth-child(2) {
-        background-color: $B_color;
+        background-color: $A_color;
         color           : $fontA;
     }
 
@@ -168,7 +206,7 @@ h3 {
 #pizza:checked {
 
     ~.menu_selector>label:nth-child(3) {
-        background-color: $B_color;
+        background-color: $A_color;
         color           : $fontA;
     }
 
@@ -180,7 +218,7 @@ h3 {
 #calzone:checked {
 
     ~.menu_selector>label:nth-child(4) {
-        background-color: $B_color;
+        background-color: $A_color;
         color           : $fontA;
     }
 
@@ -192,13 +230,22 @@ h3 {
 @include scroll_up(10px, 10px);
 
 @media only screen and (min-width: 765px) {
-.appetizer_container,
-.pasta_container,
-.pizza_container,
-.calzone_container {
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    max-width: 100%;
-}
+
+    .appetizer_container,
+    .pasta_container,
+    .pizza_container,
+    .calzone_container {
+        grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+        max-width            : 100%;
+        font-size            : 1.3rem;
+    }
+
+    .appetizer,
+    .pasta {
+        h2 {
+            width: 84px;
+        }
+    }
 
     .pizza_container,
     .calzone_container {
@@ -207,16 +254,17 @@ h3 {
         }
     }
 
-.menu_selector {
-    max-width: 100%;
-}
+    .menu_selector {
+        max-width: 100%;
+    }
 
-.menu_container {
-    padding: 25px;
-}
+    .menu_container {
+        padding: 25px;
+    }
 }
 
 @media only screen and (min-width: 1100px) {
+
     .pizza_container,
     .calzone_container {
         .price_container {
@@ -227,6 +275,7 @@ h3 {
 }
 
 @media only screen and (min-width: 1255px) {
+
     .appetizer_container,
     .pasta_container,
     .pizza_container,
@@ -234,8 +283,8 @@ h3 {
         max-width: 1200px;
     }
 
-    
+
     .menu_selector {
         max-width: 1200px;
     }
-    }
+}
